--- a/src/java_project_hotel_uni/extra_Services_Form.form
+++ b/src/java_project_hotel_uni/extra_Services_Form.form
@@ -316,8 +316,16 @@
           </SubComponents>
         </Container>
         <Component class="javax.swing.JTextField" name="total_service_price_textBox1">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="total_service_price_textBox1ActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="total_service_price_textBox1KeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="singe_service_price_textBox1">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="singe_service_price_textBox1ActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="singe_service_price_textBox1KeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
@@ -348,6 +356,10 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="how_many_times_textBox1">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="how_many_times_textBox1ActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="how_many_times_textBox1KeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel10">
           <Properties>
