--- a/src/java_project_hotel_uni/managerForm.form
+++ b/src/java_project_hotel_uni/managerForm.form
@@ -78,8 +78,8 @@
                                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="SuccessOrNot_label1" min="-2" max="-2" attributes="0"/>
                                       <Component id="receptionist_last_name_textBox1" min="-2" pref="156" max="-2" attributes="0"/>
+                                      <Component id="SuccessOrNot_label1" min="-2" pref="51" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -122,8 +122,8 @@
                               <Component id="receptionist_last_name_textBox1" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="SuccessOrNot_label1" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                          <Component id="SuccessOrNot_label1" min="-2" pref="18" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -191,9 +191,6 @@
         <Component class="javax.swing.JTextField" name="receptionist_last_name_textBox1">
         </Component>
         <Component class="javax.swing.JLabel" name="SuccessOrNot_label1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel5"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JToggleButton" name="info_guests_btn1">
           <Properties>
