--- a/src/java_project_hotel_uni/ownersForm.form
+++ b/src/java_project_hotel_uni/ownersForm.form
@@ -66,7 +66,10 @@
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="SuccessOrNot_label1" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="29" pref="29" max="-2" attributes="0"/>
+                                  <Component id="SuccessOrNot_label1" min="-2" pref="29" max="-2" attributes="0"/>
+                              </Group>
                               <Component id="textBox1_manager_user_name" min="-2" pref="177" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -85,7 +88,9 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="SuccessOrNot_label1" min="-2" pref="16" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="info_guests_btn1" min="-2" max="-2" attributes="0"/>
@@ -97,8 +102,7 @@
                           <Component id="created_reservations_btn4" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <Component id="SuccessOrNot_label1" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="textBox1_manager_user_name" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -152,9 +156,6 @@
         <Component class="javax.swing.JTextField" name="textBox1_manager_password">
         </Component>
         <Component class="javax.swing.JLabel" name="SuccessOrNot_label1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel3"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JToggleButton" name="info_guests_btn1">
           <Properties>
