--- a/src/java_project_hotel_uni/guestsForm.form
+++ b/src/java_project_hotel_uni/guestsForm.form
@@ -247,6 +247,9 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textBox1_Guest_GSMKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="textBox1_Guest_EMail">
           <Properties>
