--- a/src/java_project_hotel_uni/guestsForm.form
+++ b/src/java_project_hotel_uni/guestsForm.form
@@ -226,6 +226,9 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textBox1_Guest_First_NameActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="textBox1_Guest_ID">
           <Properties>
