--- a/src/java_project_hotel_uni/guestsForm.form
+++ b/src/java_project_hotel_uni/guestsForm.form
@@ -228,6 +228,7 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="textBox1_Guest_First_NameActionPerformed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textBox1_Guest_First_NameKeyPressed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="textBox1_Guest_ID">
